Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-92969

Linux sandbox blocks loading fonts

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.15.7, 6.2.0
    • 5.15.0, 5.15.4
    • WebEngine
    • None
    • Gentoo glibc 2.33
    • Linux/X11

      It is simply reproducible by loading www.google.com.

      Fonts are not visible, I'm not sure what changed but it worked before. I've tried older versions too and it is still reproducible. If I try it in debug I get error message:

      [323:1:0419/165548.592677:ERROR:memory_mapped_file_posix.cc(39)] fstat 124: Operation not permitted (1)
      

      backtrace is:

      #0 0x7f8cff3266c9 base::debug::CollectStackTrace()                                                                                                                                                                                                                               
      #1 0x7f8cff28a6d6 base::debug::StackTrace::StackTrace()                                                                                                                                                                                                                          
      #2 0x7f8cff27f3f4 logging::LogMessage::~LogMessage()                                                                                                                                                                                                                             
      #3 0x7f8cff27f9d2 logging::LogMessage::~LogMessage()                                                                                                                                                                                                                             
      #4 0x7f8cff33740e base::MemoryMappedFile::MapFileRegionToMemory()                                                                                                                                                                                                                
      #5 0x7f8cff299b85 base::MemoryMappedFile::Initialize()                                                                                                                                                                                                                           
      #6 0x7f8cfeb5edcc font_service::internal::MappedFontFile::Initialize()                                                                                                                                                                                                           
      #7 0x7f8cfeb5ebd3 font_service::internal::FontServiceThread::OpenStream()                                                                                                                                                                                                        
      #8 0x7f8cfeb5b370 font_service::FontLoader::openStream()                                                                                                                                                                                                                         
      #9 0x7f8cff61b511 SkTypeface_FCI::onMakeFontData()                                                                                                                                                                                                                               
      #10 0x7f8cff79bb53 ref_ft_face()                                                                                                                                                                                                                                                 
      #11 0x7f8cff79c238 SkScalerContext_FreeType::SkScalerContext_FreeType()                                                                                                                                                                                                          
      #12 0x7f8cff79c81a SkTypeface_FreeType::onCreateScalerContext()                                                                                                                                                                                                                  
      #13 0x7f8cfd6b651c SkTypeface::createScalerContext()                                                                                                                                                                                                                             
      #14 0x7f8cfd6d0082 SkStrikeCache::findOrCreateStrike()                                                                                                                                                                                                                           
      #15 0x7f8cfd6d0f6c SkStrikeSpec::findOrCreateStrike()                                                                                                                                                                                                                            
      #16 0x7f8cfd635a19 SkFont::getMetrics()                                                                                                                                                                                                                                          
      #17 0x7f8d006feea1 blink::SimpleFontData::PlatformInit()                                                                                                                                                                                                                         
      #18 0x7f8d006fffac blink::SimpleFontData::SimpleFontData()                                                                                                                                                                                                                       
      #19 0x7f8d006c7034 blink::FontDataCache::Get()                                                                                                                                                                                                                                   
      #20 0x7f8d006c7354 blink::FontCache::GetFontData()                                                                                                                                                                                                                               
      #21 0x7f8d006cd184 blink::FontFallbackList::GetFontData()                                                                                                                                                                                                                        
      #22 0x7f8d006ce835 blink::FontFallbackList::FontDataAt()                                                                                                                                                                                                                         
      #23 0x7f8d006cea94 blink::FontFallbackList::DeterminePrimarySimpleFontData()                                                                                                                                                                                                     
      #24 0x7f8d0141d9cb blink::ComputedStyle::ComputedLineHeight()                                                                                                                                                                                                                    
      #25 0x7f8d00d111e2 blink::TextControlInnerEditorElement::CreateInnerEditorStyle()                                                                                                                                                                                                
      #26 0x7f8d00d11542 blink::TextControlInnerEditorElement::CustomStyleForLayoutObject()                                                                                                                                                                                            
      #27 0x7f8d0093a9b1 blink::Element::StyleForLayoutObject()                                                                                                                                                                                                                        
      #28 0x7f8d0093b600 blink::Element::RecalcOwnStyle()                                                                                                                                                                                                                              
      #29 0x7f8d0093bfa4 blink::Element::RecalcStyle()                                                                                                                                                                                                                                 
      #30 0x7f8d009ba80c blink::ContainerNode::RecalcDescendantStyles()
      ...
      

      It can't load the fonts like /usr/share/fonts/liberation-fonts/LiberationSans-Regular.ttf

      It works if sandbox is disabled (--no-sandbox).

      It is reproducible with 80, 87, 88 based Chromium. I don't think it is a regression, I guess it is result of a system package update but Chromium works fine (system installed and custom built). I can't reproduce the issue on Windows and macOS.

        For Gerrit Dashboard: QTBUG-92969
        # Subject Branch Project Status CR V

            allan.jensen Allan Sandfeld Jensen
            pvarga Peter Varga
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes