qtwebengine: fix loading fonts on recent glibc

QtWebEngine can't load fonts on recent glibc. Source:
https://bugreports.qt.io/browse/QTBUG-92969
https://bugs.chromium.org/p/chromium/issues/detail?id=1164975

I don't want to have custom patched Qt version running for Jami,
so, for now disable sandboxing to fix font loading and wait for a
fixed Qt version.

GitLab: #442
Change-Id: Ia0918b6c47dc8a9bcfed8556043b5163e4963248